2003-01-19  Martin Blom  <martin@blom.org>

	* Released ahi.device 5.31.

	* ahi.device: Added support for playing 32 bit samples in both
	low-level and device mode. Note that 32 bit samples are truncated
	to 16 bit in non-HiFi modes and there are no assembly mixing
	routines for this sample format (yet?). [Aaf]
 
	* Updated copyright year in all files.

2002-12-14  Martin Blom  <martin@blom.org>

	* Released ahi.device 5.30.

	* ahi.device: Now looks into MOSSYS:DEVS/AudioModes and
	MOSSYS:DEVS/AHI in MorphOS build. [Harry Sintonen]

	* Released AddAudioModes 5.3.

	* AddAudioModes: Now looks into MOSSYS:DEVS/AudioModes in
	MorphOS build. [Harry Sintonen]

2002-11-20  Martin Blom  <martin@blom.org>

	* Released toccata.audio 4.6.

	* Drivers/Toccata/toccata.c: intAHIsub_GetAttr() could generate
	an enforcer hit if no card is present. [Sensei]

2002-10-16  Martin Blom  <martin@blom.org>

	* ahi.device/paula.audio: The distorsion bug reported by Sensei
	(see 2002-07-06) turned out not to be the 50 Hz bug. In fact, it
	turned out not to be a bug at all. It was just paula.audio that
	couldn't play at 44100 Hz and instead using 44336 Hz, causing AHI
	to resample all sounds that should play at 44100 Hz. Haha, I knew
	it. Not my fault, not my fault, not my fault!! (See the
	documentation for the AHIpaulaFakeMixFreq environmant variable for
	more information.)
	
2002-09-30  Martin Blom  <martin@blom.org>

	* Released ahi.device 5.29.

2002-07-08  Martin Blom  <martin@blom.org>

	* ahi.device: Did you know, by the way, that AttemptSemaphore() is
	not safe to call from interrupts? Oh, you did? Proves what a sad,
	miserable excuse for a developer I am. This bug has been there for
	about five years now ... [Nicolas Sallin]
	
2002-07-07  Martin Blom  <martin@blom.org>

	* Released AHI preferences 5.7.

	* AHI: No enforcer hits if no modes are available. [Don Cox]

2002-07-06  Martin Blom  <martin@blom.org>

	* Released AHI preferences 5.6.
